--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#5cdd8b" />
+    <meta name="description" content="Uptime Kuma monitoring tool" />
     <title>Uptime Kuma</title>
   </head>
   <body>
