--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/svg+xml" href="/icon.svg"/>
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="theme-color" content="#5cdd8b"/>
-    <meta name="description" content="Uptime Kuma monitoring tool"/>
+    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
+    <meta name="theme-color" id="theme-color" content="" />
+    <meta name="description" content="Uptime Kuma monitoring tool" />
     <title>Uptime Kuma</title>
 </head>
 <body>
